# ripped-potato

./: .gitignore  .memory  2025-08-05-this-session-is-being-continued-from-a-previous-co.txt  AI_COACH_ARCHITECTURE_PLAN.md  CLAUDE.md  COMMON_ENTITIES_DESIGN.md  DEPLOYMENT_ISSUES.md  DESIGN_SYSTEM.md  GOOGLE_OAUTH_SETUP.md  LOCAL_TESTING.md  MIGRATION_PLAN_TO_MONGODB.md  PR_REVIEW_CHATBOT_ENHANCEMENT.md  README.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_FIX.md  SynergyFit_Runbook_Migration.md  conversation_db_example.json  conversation_endpoint.py  debug-api.html  debug-auth.html  dump.rdb  package-lock.json  package.json  pre-deployment-checklist.sh  render.yaml  ripped-potato.code-workspace  streaming & reasoning ai-coach.md  test-api-integration.html  test-auth.html  test-cors.html  test-render-deployment.js
ai-coach-service/: .env.example  AB_TEST.md  Dockerfile  README.md  ab_harness.py  docker-compose.yml  pyproject.toml  start.sh  start_dev.sh  test_integration.md  test_service.py  video_coach_test.py  video_fix_verify.py  video_probe.py
ai-coach-service/app/: config.py  main.py
ai-coach-service/app/api/v1/: chat.py  chat_stream.py  coach_question.py  conversations.py  documents.py  exercises.py  health.py  internal.py  league_map.py  progressions.py  suggestions.py  train_now.py
ai-coach-service/app/core/: dedup.py  embeddings.py  rate_limiter.py
ai-coach-service/app/core/agents/: base.py  context_factory.py  data_reader.py  date_utils.py  orchestrator.py  (+6 more)
ai-coach-service/app/middleware/: auth.py
ai-coach-service/app/models/: schemas.py
ai-coach-service/app/prompts/: __init__.py  data_reader.py  fitness_coach.py
ai-coach-service/app/services/: coach_question_service.py  context_service.py  conversation_service.py  crud_service.py  daily_pick_service.py  recommendation_service.py  short_term_context_service.py
ai-coach-service/evals/: README.md  conftest.py  harness.py  scenarios.py  test_think_then_act.py
ai-coach-service/scripts/: README.md  analyze_feedback.py
ai-coach-service/tests/: test_add_exercise_dedup.py  test_calendar_service.py  test_coach_question_cache.py  test_daily_recommendation_skill.py  test_delete_calendar_event_skill.py  test_documents.py  test_exercise_resolver.py  test_exercise_skills.py  test_generate_plan_skill.py  test_grounding_intent.py  test_internal_resolver.py  test_league_map.py  test_live_plan_skills.py  test_memory_tombstones.py  test_plan_builder.py  test_prompt_policy.py  test_recommendation_service.py  test_reflection.py  test_resolve_week_skill.py  test_schedule_existing_template.py  test_schedule_plan_skill.py  test_schedule_reuse_template.py  test_show_plan_skill.py  test_text_utils.py  test_train_now_helpers.py  test_update_calendar_workout_skill.py  test_validate_plan_skill.py  test_workout_template_dedup.py  test_workout_template_tools.py  test_youtube_search.py
ripped-potato-backend/: .dockerignore  .env.example  .gitignore  Makefile  README.md  poetry.toml  pyproject.toml  setup.sh
ripped-potato-backend/app/: main.py
ripped-potato-backend/app/api/: deps.py
ripped-potato-backend/app/core/: config.py  security.py
ripped-potato-backend/app/db/: mongodb.py
ripped-potato-backend/app/models/: discipline.py  exercise.py  external_activity.py  goal.py  plan.py  predefined_workout.py  progression_path.py  training_plan.py  user.py  user_goal_progress.py  user_training_pattern.py  workout.py  workout_template.py  workout_type.py
ripped-potato-backend/app/schemas/: discipline.py  exercise.py  external_activity.py  goal.py  plan.py  predefined_workout.py  progression_path.py  token.py  training_plan.py  user.py  user_goal_progress.py  user_training_pattern.py  workout.py  workout_template.py  workout_type.py
ripped-potato-backend/scripts/docker/: Dockerfile  docker-compose.yml
ripped-potato-backend/tests/: test_auth.py  test_basic.py  test_setup.py
(+390 files in other folders)
